fix text align kalkulator manfaat

--- a/src/components/ActuarialCalculator.css
+++ b/src/components/ActuarialCalculator.css
@@ -48,7 +48,7 @@
 }
 
 .manfaat-karyawan-container h1 {
-    text-align: end;
+    text-align: center;
     color: var(--text-primary);
     margin-bottom: 30px;
     font-size: 35px;
